--- a/FrontGoodEnergy/pages/chatbot.html
+++ b/FrontGoodEnergy/pages/chatbot.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2amarelo-removebg-preview.png?raw=true" type="image/x-icon">
+    <link rel="shortcut icon" href="/FrontGoodEnergy/assets/GoodEnergyLogo.png" type="image/x-icon">
     <title>Chatbot — GoodEnergy</title>
     <link rel="stylesheet" href="../styles/styles.css" /> <meta name="theme-color" content="#ffffff">
 </head>
 <body data-active="chat"> <div class="app">
         <aside class="sidebar">
-            <div class="brand"><img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2amarelo-removebg-preview.png?raw=true"><h1>GoodEnergy</h1></div>
+            <div class="brand"><img src="/FrontGoodEnergy/assets/GoodEnergyLogo.png"><h1>GoodEnergy</h1></div>
             <nav class="nav">
                 </nav>
             <div class="foot">Olá, <span id="userName">Usuário</span></div>
@@ -34,10 +34,10 @@
                     </div>
                     <div class="chat-input">
                         <button id="chat-mic-btn" class="icon-btn">
-                            <img class="icon" src="URL_DO_SEU_ICONE_MICROFONE" alt="Microfone"> </button>
+                            <img class="icon" src="/FrontGoodEnergy/assets/8725978_microphone_icon.png" alt="Microfone"> </button>
                         <input type="text" id="chat-input-text" placeholder="Digite sua mensagem...">
                         <button id="chat-send-btn" class="icon-btn">
-                            <img class="icon" src="URL_DO_SEU_ICONE_ENVIAR" alt="Enviar"> </button>
+                            <img class="icon" src="/FrontGoodEnergy/assets/9027465_send_icon.png" alt="Enviar"> </button>
                     </div>
                 </div>
             </div>
