--- a/FrontGoodEnergy/pages/chatbot.html
+++ b/FrontGoodEnergy/pages/chatbot.html
@@ -55,7 +55,9 @@
                 </div>
         </main>
     </div>
-    
+    <div id="zenModeOverlay" class="zen-mode-overlay hide"> <h2>Modo Zen Ativado</h2> <p>Clique em qualquer lugar para voltar.</p> </div>
+    <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
+    <div id="toast-container" class="toast-container"></div>
     <script src="../js/chatbot.js"></script> 
 </body>
 </html>
