--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -29,6 +29,9 @@
     <a class="icon-btn secondary" href="/FrontGoodEnergy/pages/register.html" style="flex:1;">Criar Conta</a>
 </div>
   </div>
+  <div id="zenModeOverlay" class="zen-mode-overlay hide"> <h2>Modo Zen Ativado</h2> <p>Clique em qualquer lugar para voltar.</p> </div>
+    <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
+    <div id="toast-container" class="toast-container"></div>
   <script src="../js/app.js"></script>
 </body>
 </html>
