--- a/FrontGoodEnergy/pages/chatbot.html
+++ b/FrontGoodEnergy/pages/chatbot.html
@@ -10,17 +10,31 @@
 </head>
 <body data-active="chat">
     <div class="app">
+        <!-- Sidebar com logo + histórico -->
         <aside class="sidebar">
-            <div class="brand"><img src="/FrontGoodEnergy/assets/GoodEnergyLogo.png"><h1>GoodEnergy</h1></div>
-            <nav class="nav">
-                </nav>
+            <div class="brand">
+                <img src="/FrontGoodEnergy/assets/GoodEnergyLogo.png" alt="GoodEnergy Logo">
+                <h1>GoodEnergy</h1>
+            </div>
+
+            <!-- Histórico dentro da sidebar -->
+            <div id="conversation-history" class="conversation-history">
+                <h4>Histórico de Conversas</h4>
+                <ul id="history-list">
+                
+                </ul>
+            </div>
+
             <div class="foot">Olá, <span id="userName">Usuário</span></div>
         </aside>
 
+        <!-- Chat principal -->
         <main>
             <div class="topbar">
                 <a href="assistenteIA.html" class="icon-btn back-to-assistant-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+                         viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+                         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                         <polyline points="9 22 9 12 15 12 15 22"></polyline>
                     </svg>
@@ -33,8 +47,7 @@
                         <h3>Assistente IA</h3>
                     </div>
                     <div class="chat-body">
-                        <div id="chat-messages" class="chat-messages">
-                            </div>
+                        <div id="chat-messages" class="chat-messages"></div>
                     </div>
                     <div class="chat-input">
                         <button id="chat-mic-btn" class="icon-btn">
@@ -46,16 +59,14 @@
                         </button>
                     </div>
                 </div>
-
-                <div id="conversation-history" class="conversation-history">
-                    <h4>Histórico de Conversas</h4>
-                    <ul id="history-list">
-                        </ul>
-                </div>
-                </div>
+            </div>
         </main>
     </div>
-    <div id="zenModeOverlay" class="zen-mode-overlay hide"> <h2>Modo Zen Ativado</h2> <p>Clique em qualquer lugar para voltar.</p> </div>
+
+    <div id="zenModeOverlay" class="zen-mode-overlay hide"> 
+        <h2>Modo Zen Ativado</h2> 
+        <p>Clique em qualquer lugar para voltar.</p> 
+    </div>
     <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
     <div id="toast-container" class="toast-container"></div>
     <script src="../js/chatbot.js"></script> 
