--- a/FrontGoodEnergy/pages/assistenteIA.html
+++ b/FrontGoodEnergy/pages/assistenteIA.html
@@ -19,6 +19,7 @@
         <main>
             <div class="topbar">
                 <a href="chatbot.html" class="ai-assistant-btn active" id="linkToChatPage">Assistente IA</a>
+                <img src="" alt="">
                 
                 <div class="actions">
                     </div>
