alteracoes no css

--- a/FrontGoodEnergy/pages/chatbot.html
+++ b/FrontGoodEnergy/pages/chatbot.html
@@ -44,7 +44,12 @@
             <div class="content">
                 <div id="chat-widget" class="chat-widget show"> 
                     <div class="chat-header">
-                        <h3>Assistente IA</h3>
+                        <div class="chat-header">
+                <img src="https://github.com/Vinicius-Dias07/Good-Energy/blob/master/FrontGoodEnergy/assets/2890568_ai_artificial%20intelligence_automaton_brain_electronics_icon.png?raw=true" alt="Logo da GoodEnergy" class="chat-header-logo">
+                <h3>Assistente IA-GoodEnergy </h3>
+            </div>
+
+                    
                     </div>
                     <div class="chat-body">
                         <div id="chat-messages" class="chat-messages"></div>
