--- a/FrontGoodEnergy/pages/dashboard.html
+++ b/FrontGoodEnergy/pages/dashboard.html
@@ -114,15 +114,29 @@
                         </div>
                     </div>
                 </div>
+                 <div class="grid-destaque">
+                    <div class="card">
+                        <h3>Meta de Economia Mensal</h3>
+                        <div class="gauge-container" style="height: 280px;">
+                            <canvas id="savingsGoalChart"></canvas>
+                        </div>
+                        <div class="kpi-value">
+                            <span id="currentSavings">R$ 0,00</span> de <span id="goalValue">R$ 500,00</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
+
+
     
     <div id="zenModeOverlay" class="zen-mode-overlay hide"> <h2>Modo Zen Ativado</h2> <p>Clique em qualquer lugar para voltar.</p> </div>
     <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
     <div id="toast-container" class="toast-container"></div>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="FrontGoodEnergy\js\chartsjs-gauge.min.js"></script>
     <script src="../js/app.js"></script>
 </body>
 </html>
