--- a/FrontGoodEnergy/pages/dashboard.html
+++ b/FrontGoodEnergy/pages/dashboard.html
@@ -13,7 +13,7 @@
 
   
   <link rel="stylesheet" href="../styles/styles.css" />
-  <script src="/https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body data-active="dashboard">
   <div class="app">
