--- a/FrontGoodEnergy/pages/dashboard.html
+++ b/FrontGoodEnergy/pages/dashboard.html
@@ -135,8 +135,9 @@
     <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
     <div id="toast-container" class="toast-container"></div>
     
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="FrontGoodEnergy\js\chartsjs-gauge.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-chart-gauge@3.0.0/dist/chartjs-chart-gauge.min.js"></script>
+    
     <script src="../js/app.js"></script>
 </body>
 </html>
