--- a/FrontGoodEnergy/pages/assistenteIA.html
+++ b/FrontGoodEnergy/pages/assistenteIA.html
@@ -54,7 +54,7 @@
                     <p class="muted">Você já faz parte do futuro da energia. Explore todo o potencial do seu Assistente de IA, otimize seu consumo e descubra novas funcionalidades para tornar sua casa ainda mais conectada e eficiente.</p>
                     <div class="cta-actions">
 
-                        <a href="#chat-widget" class="cta-button icon-link js-toggle-chat">
+                        <a href="/FrontGoodEnergy/pages/suporte.html" class="cta-button icon-link js-toggle-chat">
                             <img src="/FrontGoodEnergy/assets/suporte.png" class="icon" alt="Ícone Suporte">
                             Suporte e Manutenção
                         </a>
