--- a/FrontGoodEnergy/pages/suporte.html
+++ b/FrontGoodEnergy/pages/suporte.html
@@ -8,18 +8,19 @@
 </head>
 <body>
    <main>
-            <div class="topbar">
-                <a href="assistenteIA.html" class="icon-btn back-to-assistant-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
-                         viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-                         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                        <polyline points="9 22 9 12 15 12 15 22"></polyline>
-                    </svg>
-                </a>
-            </div>
-
+      <div class="topbar-page">
+        <a href="assistenteIA.html" class="icon-btn back-to-assistant-btn with-text">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left">
+                <line x1="19" y1="12" x2="5" y2="12"></line>
+                <polyline points="12 19 5 12 12 5"></polyline>
+            </svg>
+            <span>Voltar</span>
+        </a>
+    </div>
     <header>
+        <div class="header-icon-container">
+            <img src="/FrontGoodEnergy/assets/suporte.png" alt="Ícone de Suporte" class="header-icon">
+        </div>
         <h1>Suporte e Manutenção</h1>
         <p>Soluções inteligentes para sua casa, com suporte profissional.</p>
     </header>
