--- a/FrontGoodEnergy/pages/help.html
+++ b/FrontGoodEnergy/pages/help.html
@@ -5,13 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="/FrontGoodEnergy/assets/GoodEnergyLogo.png" type="image/x-icon">
   <title>Ajuda & FAQ — GoodEnergy</title>
-
-  
-
-  <!-- Cor da barra em navegadores mobile -->
   <meta name="theme-color" content="#ffffff">
-
-  
   <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body data-active="help">
@@ -21,10 +15,20 @@
       <nav class="nav"></nav>
       <div class="foot">Olá, <span id="userName">Usuário</span></div>
     </aside>
-
     <main>
       <div class="topbar">
       <a href="assistenteIA.html" class="ai-assistant-btn">Assistente IA</a>
+      <div class="actions">
+                     <div style="position: relative;">
+                        <button id="notificationsBtn" class="icon-btn">
+                            <img src="/FrontGoodEnergy/assets/notificacoes.png" alt="Notificações" class="icon-img">
+                            <span id="notificationBadge" class="badge hide"></span>
+                        </button>
+                        <div id="notificationsPopup" class="notifications-popup hide">
+                            <div id="popupAlerts" class="list"></div>
+                        </div>
+                    </div>
+                </div>
       </div>
       <div class="content">
         <div class="card">
@@ -43,7 +47,16 @@
       </div>
     </main>
   </div>
-  <div id="zenModeOverlay" class="zen-mode-overlay hide"> <h2>Modo Zen Ativado</h2> <p>Clique em qualquer lugar para voltar.</p> </div>
+  <div id="confirmModal" class="modal-overlay hide">
+    <div class="modal-panel">
+        <h3 id="confirmTitle">Confirmar Ação</h3>
+        <p id="confirmMessage" class="mt12" style="color: var(--muted);"></p>
+        <div class="confirm-buttons">
+            <button id="cancelBtn" class="icon-btn secondary">Cancelar</button>
+            <button id="confirmBtn" class="icon-btn">Confirmar</button>
+        </div>
+    </div>
+</div>
     <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
     <div id="toast-container" class="toast-container"></div>
   <script src="../js/app.js"></script>
