--- a/FrontGoodEnergy/pages/index.html
+++ b/FrontGoodEnergy/pages/index.html
@@ -5,15 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="/FrontGoodEnergy/assets/GoodEnergyLogo.png" type="image/x-icon">
   <title>GoodEnergy — Energia solar inteligente</title>
-
-
-  <!-- Cor da barra em navegadores mobile -->
   <meta name="theme-color" content="#ffffff">
-
-
-  <!-- CSS -->
   <link rel="stylesheet" href="../styles/styles.css" />
-
 </head>
 <body class="hero">
   <div class="panel">
@@ -25,13 +18,22 @@
       Sua energia, sob seu controle.
     </p>
     <div style="display: flex; gap: 12px;">
-    <a class="icon-btn" href="/FrontGoodEnergy/pages/login.html" style="flex:1;">Entrar</a>
-    <a class="icon-btn secondary" href="/FrontGoodEnergy/pages/register.html" style="flex:1;">Criar Conta</a>
-</div>
+      <a class="icon-btn" href="/FrontGoodEnergy/pages/login.html" style="flex:1;">Entrar</a>
+      <a class="icon-btn secondary" href="/FrontGoodEnergy/pages/register.html" style="flex:1;">Criar Conta</a>
+    </div>
   </div>
-  <div id="zenModeOverlay" class="zen-mode-overlay hide"> <h2>Modo Zen Ativado</h2> <p>Clique em qualquer lugar para voltar.</p> </div>
-    <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
-    <div id="toast-container" class="toast-container"></div>
+  <div id="confirmModal" class="modal-overlay hide">
+    <div class="modal-panel">
+        <h3 id="confirmTitle">Confirmar Ação</h3>
+        <p id="confirmMessage" class="mt12" style="color: var(--muted);"></p>
+        <div class="confirm-buttons">
+            <button id="cancelBtn" class="icon-btn secondary">Cancelar</button>
+            <button id="confirmBtn" class="icon-btn">Confirmar</button>
+        </div>
+    </div>
+</div>
+  <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
+  <div id="toast-container" class="toast-container"></div>
   <script src="../js/app.js"></script>
 </body>
 </html>
