--- a/FrontGoodEnergy/pages/register.html
+++ b/FrontGoodEnergy/pages/register.html
@@ -31,9 +31,18 @@
       </div>
     </form>
   </div>
-  <div id="zenModeOverlay" class="zen-mode-overlay hide"> <h2>Modo Zen Ativado</h2> <p>Clique em qualquer lugar para voltar.</p> </div>
-    <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
-    <div id="toast-container" class="toast-container"></div>
+  <div id="confirmModal" class="modal-overlay hide">
+    <div class="modal-panel">
+        <h3 id="confirmTitle">Confirmar Ação</h3>
+        <p id="confirmMessage" class="mt12" style="color: var(--muted);"></p>
+        <div class="confirm-buttons">
+            <button id="cancelBtn" class="icon-btn secondary">Cancelar</button>
+            <button id="confirmBtn" class="icon-btn">Confirmar</button>
+        </div>
+    </div>
+</div>
+  <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
+  <div id="toast-container" class="toast-container"></div>
   <script src="../js/app.js"></script>
 </body>
 </html>
