--- a/FrontGoodEnergy/pages/reports.html
+++ b/FrontGoodEnergy/pages/reports.html
@@ -21,34 +21,48 @@
                 <div class="actions">
                      <div style="position: relative;">
                         <button id="notificationsBtn" class="icon-btn">
-                            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 10-12 0v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path></svg>
-                            <span id="notificationBadge" class="badge"></span>
+                            <img src="/FrontGoodEnergy/assets/notificacoes.png" alt="Notificações" class="icon-img">
+                            <span id="notificationBadge" class="badge hide"></span>
                         </button>
                         <div id="notificationsPopup" class="notifications-popup hide">
                             <div id="popupAlerts" class="list"></div>
                         </div>
                     </div>
-                    <button id="zenModeBtn" class="icon-btn" title="Modo Zen">
-                        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-                    </button>
                 </div>
             </div>
             <div class="content">
-                <div class="card">
-                    <h3>Relatório de Geração Mensal</h3>
-                    <div class="grafico-container mt18">
-                        <canvas id="reportChart"></canvas>
+                <div class="content">
+                    <div class="card">
+                        <h3>Relatório de Geração Mensal</h3>
+                        <div class="grafico-container mt18">
+                            <canvas id="reportChart"></canvas>
+                        </div>
+                    </div>
+
+                    <div class="card" id="insightsCard" style="display: none;">
+                        <h3>💡 Análise Inteligente do seu Mês</h3>
+                        <div id="insightsText" class="insights-container">
+                            <p>Analisando seus dados...</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
-    
-    <div id="zenModeOverlay" class="zen-mode-overlay hide"> <h2>Modo Zen Ativado</h2> <p>Clique em qualquer lugar para voltar.</p> </div>
+    <div id="confirmModal" class="modal-overlay hide">
+    <div class="modal-panel">
+        <h3 id="confirmTitle">Confirmar Ação</h3>
+        <p id="confirmMessage" class="mt12" style="color: var(--muted);"></p>
+        <div class="confirm-buttons">
+            <button id="cancelBtn" class="icon-btn secondary">Cancelar</button>
+            <button id="confirmBtn" class="icon-btn">Confirmar</button>
+        </div>
+    </div>
+</div>
     <div id="loader-overlay" class="loader-overlay hide"><div class="loader"></div></div>
     <div id="toast-container" class="toast-container"></div>
-
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="../js/app.js"></script>
 </body>
 </html>
