--- a/FrontGoodEnergy/pages/assistenteIA.html
+++ b/FrontGoodEnergy/pages/assistenteIA.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="/FrontGoodEnergy/assets/GoodEnergyLogo.png" type="image/x-icon">
     <title>Assistente IA — GoodEnergy</title>
-    <link rel="stylesheet" href="../styles/styles.css" /> <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body data-active="ia">
     <div class="app">
@@ -44,12 +44,7 @@
                     <h2>Maximize Sua Experiência com Energia Inteligente!</h2>
                     <p class="muted">Você já faz parte do futuro da energia. Explore todo o potencial do seu Assistente de IA, otimize seu consumo e descubra novas funcionalidades para tornar sua casa ainda mais conectada e eficiente.</p>
                     <div class="cta-actions">
-<<<<<<< HEAD
-                        <a href="#chat-widget" class="cta-button icon-link js-toggle-chat">
-=======
-
-                        <a href="/FrontGoodEnergy/pages/suporte.html" class="cta-button icon-link js-toggle-chat">
->>>>>>> 6d3704fcbf40c9c6486269e0c09353939064cfcf
+                        <a href="/FrontGoodEnergy/pages/suporte.html" class="cta-button icon-link">
                             <img src="/FrontGoodEnergy/assets/suporte.png" class="icon" alt="Ícone Suporte">
                             Suporte e Manutenção
                         </a>
@@ -57,7 +52,7 @@
                             <img src="/FrontGoodEnergy/assets/casa.png" class="icon" alt="Ícone Casa Inteligente">
                             Casa Inteligente
                         </a>
-                        <a href="#chat-widget" class="cta-button icon-link js-toggle-chat">
+                        <a href="chatbot.html" class="cta-button icon-link">
                             <img src="/FrontGoodEnergy/assets/assistente.png" class="icon" alt="Ícone Assistente">
                             Fale com o Assistente
                         </a>
