--- a/FrontGoodEnergy/pages/suporte.html
+++ b/FrontGoodEnergy/pages/suporte.html
@@ -3,69 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suporte e Manutenção - Tech Residence</title>
+    <title>Suporte e Manutenção - GoodEnergy</title>
     <link rel="stylesheet" href="../styles/suporte.css">
 </head>
 <body>
    <main>
-<<<<<<< HEAD
-        <div class="topbar">
-            <a href="assistenteIA.html" class="icon-btn back-to-assistant-btn">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
-                     viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
-                </svg>
-            </a>
-        </div>
-        <header>
-            <h1>Suporte e Manutenção</h1>
-            <p>Soluções inteligentes para sua casa, com suporte profissional.</p>
-        </header>
-        <main>
-            <section class="faq-section">
-                <h2>Perguntas Frequentes</h2>
-                <div class="faq-container">
-                    <div class="faq-item">
-                        <button class="faq-question">
-                            <span>Como faço para instalar uma tomada inteligente?</span>
-                            <span class="plus-icon">+</span>
-                        </button>
-                        <div class="faq-answer">
-                            <p>A instalação de tomadas inteligentes geralmente exige a substituição de uma tomada comum. Certifique-se de que a energia esteja desligada no disjuntor antes de começar. A maioria dos modelos exige a conexão dos fios de fase, neutro e terra. Siga as instruções do manual do fabricante para uma instalação segura. *Recomendamos sempre a contratação de um de nossos instaladores profissionais para garantir a segurança e o funcionamento correto.*</p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <button class="faq-question">
-                            <span>Minha Alexa não está respondendo, o que devo fazer?</span>
-                            <span class="plus-icon">+</span>
-                        </button>
-                        <div class="faq-answer">
-                            <p>Primeiro, verifique se o dispositivo está conectado à tomada e se a luz indicadora está acesa. Tente desconectar e reconectar o cabo de energia. Se o problema persistir, pode ser um problema de conexão Wi-Fi. Certifique-se de que a rede Wi-Fi está funcionando corretamente. Se ainda assim não funcionar, entre em contato conosco para suporte técnico. *Nossos profissionais podem diagnosticar e resolver o problema rapidamente.*</p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <button class="faq-question">
-                            <span>Preciso de ajuda para configurar minha iluminação automatizada.</span>
-                            <span class="plus-icon">+</span>
-                        </button>
-                        <div class="faq-answer">
-                            <p>A configuração da iluminação automatizada geralmente envolve a conexão das lâmpadas à rede Wi-Fi e ao aplicativo do fabricante. Certifique-se de que sua rede esteja estável e que você tenha o aplicativo correto instalado no seu smartphone. Para configurações mais complexas ou para otimizar o sistema, *aconselhamos agendar uma visita com um de nossos especialistas em automação residencial.*</p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <button class="faq-question">
-                            <span>Como realizar a manutenção de um smart plug?</span>
-                            <span class="plus-icon">+</span>
-                        </button>
-                        <div class="faq-answer">
-                            <p>Os smart plugs são de baixa manutenção. Mantenha-os limpos, livre de poeira, e evite sobrecarregá-los com aparelhos de alta potência. Caso perceba algum comportamento estranho, como desconexões frequentes, tente reiniciar o dispositivo e o roteador. Se o problema persistir, pode ser um sinal de falha do hardware, e é hora de procurar um profissional. *Nossa equipe está pronta para realizar um diagnóstico completo.*</p>
-                        </div>
-=======
       <div class="topbar-page">
         <a href="assistenteIA.html" class="icon-btn back-to-assistant-btn with-text">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="19" y1="12" x2="5" y2="12"></line>
                 <polyline points="12 19 5 12 12 5"></polyline>
             </svg>
@@ -90,22 +35,31 @@
                         <span class="plus-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>A instalação de tomadas inteligentes geralmente exige a substituição de uma tomada comum. Certifique-se de que a energia esteja desligada no disjuntor antes de começar. A maioria dos modelos exige a conexão dos fios de fase, neutro e terra. Siga as instruções do manual do fabricante para uma instalação segura. *Recomendamos sempre a contratação de um de nossos instaladores profissionais para garantir a segurança e o funcionamento correto.*</p>
->>>>>>> 6d3704fcbf40c9c6486269e0c09353939064cfcf
+                        <p>A instalação de tomadas inteligentes geralmente exige a substituição de uma tomada comum. Certifique-se de que a energia esteja desligada no disjuntor antes de começar. Siga as instruções do manual do fabricante para uma instalação segura. *Recomendamos sempre a contratação de um de nossos instaladores profissionais.*</p>
                     </div>
                 </div>
-            </section>
-            <section class="contact-section">
-                <h2>Contato</h2>
-                <p>Para agendar um serviço, tirar dúvidas ou solicitar suporte especializado, entre em contato conosco. Estamos prontos para ajudar.</p>
-                <div class="contact-info">
-                    <p>E-mail: <a href="mailto:suporte@techresidence.com.br">suporte@GoodEnergy.com.br</a></p>
-                    <p>Telefone: <a href="tel:+5511999999999">(11) 23456-7684</a></p>
+                 <div class="faq-item">
+                    <button class="faq-question">
+                        <span>Minha Alexa não está respondendo, o que devo fazer?</span>
+                        <span class="plus-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Primeiro, verifique se o dispositivo está conectado à tomada e se a luz indicadora está acesa. Tente desconectar e reconectar o cabo de energia. Se o problema persistir, pode ser um problema de conexão Wi-Fi. *Nossos profissionais podem diagnosticar e resolver o problema rapidamente.*</p>
+                    </div>
                 </div>
-                <a href="mailto:suporte@GoodEnergy.com.br" class="contact-button">Contate-nos</a>
-            </section>
-        </main>
+            </div>
+        </section>
+        <section class="contact-section">
+            <h2>Contato</h2>
+            <p>Para agendar um serviço ou tirar dúvidas, entre em contato conosco.</p>
+            <div class="contact-info">
+                <p>E-mail: <a href="mailto:suporte@goodenergy.com.br">suporte@goodenergy.com.br</a></p>
+                <p>Telefone: <a href="tel:+5511234567684">(11) 23456-7684</a></p>
+            </div>
+            <a href="mailto:suporte@goodenergy.com.br" class="contact-button">Contate-nos</a>
+        </section>
     </main>
+   </main>
     <script src="../js/suporte.js"></script>
 </body>
 </html>
