--- a/FrontGoodEnergy/pages/dashboard.html
+++ b/FrontGoodEnergy/pages/dashboard.html
@@ -17,7 +17,10 @@
         </aside>
         <main>
             <div class="topbar">
-                <a href="assistenteIA.html" class="ai-assistant-btn">Assistente IA</a>
+                <a href="assistenteIA.html" class="ai-assistant-btn highlighted-ai-btn">
+    <img src="/FrontGoodEnergy/assets/2890566_ai_artificial intelligence_automaton_brain_electronics_icon.png" alt="Ícone Assistente IA" class="ai-image-icon">
+    Assistente IA
+</a>
                 <div class="actions">
                     <div style="position: relative;">
                         <button id="notificationsBtn" class="icon-btn">
