--- a/FrontGoodEnergy/pages/user.html
+++ b/FrontGoodEnergy/pages/user.html
@@ -16,8 +16,11 @@
             <div class="foot">Olá, <span id="userName">Usuário</span></div>
         </aside>
         <main>
-            <div class="topbar">
-                <a href="assistenteIA.html" class="ai-assistant-btn">Assistente IA</a>
+           <div class="topbar">
+                <a href="assistenteIA.html" class="ai-assistant-btn highlighted-ai-btn">
+    <img src="/FrontGoodEnergy/assets/2890566_ai_artificial intelligence_automaton_brain_electronics_icon.png" alt="Ícone Assistente IA" class="ai-image-icon">
+    Assistente IA
+</a>
                 <div class="actions">
                      <div style="position: relative;">
                         <button id="notificationsBtn" class="icon-btn">
