--- a/FrontGoodEnergy/pages/assistenteIA.html
+++ b/FrontGoodEnergy/pages/assistenteIA.html
@@ -16,8 +16,10 @@
         </aside>
         <main>
             <div class="topbar">
-                <a href="chatbot.html" class="ai-assistant-btn active" id="linkToChatPage">Assistente IA</a>
-                <div class="actions"></div>
+        <a href="assistenteIA.html" class="ai-assistant-btn highlighted-ai-btn">
+            <img src="/FrontGoodEnergy/assets/2890566_ai_artificial intelligence_automaton_brain_electronics_icon.png" alt="Ícone Assistente IA" class="ai-image-icon">
+            Assistente IA
+        </a>
             </div>
             <div class="content">
                 <div class="hero">
