--- a/FrontGoodEnergy/pages/assistenteIA.html
+++ b/FrontGoodEnergy/pages/assistenteIA.html
@@ -17,7 +17,7 @@
         <main>
             <div class="topbar">
         <a href="assistenteIA.html" class="ai-assistant-btn highlighted-ai-btn">
-            <img src="/FrontGoodEnergy/assets/2890566_ai_artificial intelligence_automaton_brain_electronics_icon.png" alt="Ícone Assistente IA" class="ai-image-icon">
+            <img src="/FrontGoodEnergy/assets/good_energy_ia-removebg-preview.png" alt="Ícone Assistente IA" class="ai-image-icon">
             Assistente IA
         </a>
             </div>
@@ -25,7 +25,7 @@
                 <div class="hero">
                     <div class="panel">
                         <h1 class="brand-lg">
-                           <img src="/FrontGoodEnergy/assets/GoodEnergyLogo.png" alt="Logo GoodEnergy">
+                           <img src="/FrontGoodEnergy/assets/good_energy_ia-removebg-preview.png" alt="Logo GoodEnergy">
                            Assistente de IA
                         </h1>
                         <p class="muted mt12">Receba suporte dedicado, otimize seu consumo de energia solar, tire dúvidas e controle sua casa com a inteligência artificial.</p>
