--- a/FrontGoodEnergy/pages/settings.html
+++ b/FrontGoodEnergy/pages/settings.html
@@ -18,7 +18,7 @@
     <main>
       <div class="topbar">
                 <a href="assistenteIA.html" class="ai-assistant-btn highlighted-ai-btn">
-    <img src="/FrontGoodEnergy/assets/2890566_ai_artificial intelligence_automaton_brain_electronics_icon.png" alt="Ícone Assistente IA" class="ai-image-icon">
+    <img src="/FrontGoodEnergy/assets/good_energy_ia-removebg-preview.png" alt="Ícone Assistente IA" class="ai-image-icon">
     Assistente IA
 </a>
         <div class="actions">
