--- a/FrontGoodEnergy/pages/dashboard.html
+++ b/FrontGoodEnergy/pages/dashboard.html
@@ -36,7 +36,7 @@
             <div class="content">
                 <div class="kpis">
                     <div class="card kpi"> <h3>Geração Hoje</h3> <div id="kpiGen" class="value">-- kWh</div> </div>
-                    <div class="card kpi"> <h3>Consumo da Casa</h3> <div id="kpiUse" class="value">-- kW</div> <div class="sub">Consumo em tempo real</div> </div>
+                    <div class="card kpi"> <h3>Consumo da Casa</h3> <div id="kpiUse" class="value">-- kWh</div> <div class="sub">Consumo em tempo real</div> </div>
                     <div class="card kpi"> <h3>Economia Estimada Hoje</h3> <div id="kpiSaving" class="value">R$ --</div> </div>
                     
                     <div id="aiSmartStackContainer" class="smart-stack-container card kpi">
@@ -66,12 +66,12 @@
                         <div class="weather-location">
                             <span>Previsão para:</span>
                             <strong id="weather-location-name">--</strong>
+                            <div class="weather-forecast">
+                                <span>Previsão de Geração (Amanhã):</span>
+                                <strong id="generationForecast">Calculando...</strong>
+                            </div>
                         </div>
 
-                        <div class="weather-forecast">
-                            <span>Previsão de Geração (Amanhã):</span>
-                            <strong id="generationForecast">Calculando...</strong>
-                        </div>
                     </div>
                 </div>
                 <div class="card">
